# picture-uploader

./: .gitignore  README.md  docker-compose.yml
docker/: app.Dockerfile  migrator.Dockerfile  postgres.Dockerfile
docker/entrypoints/: app.sh  init-db.sh  migrator.sh
env/: app.dev.env  db.dev.env  migrator.dev.env
src/: .coveragerc  mutmut_config.py  setup.cfg
src/api/: __init__.py  app.py  config.py  containers.py  dtos.py  exceptions.py  gunicorn.conf.py
src/api/domain/: entities.py  mapper.py
src/api/domain/interfaces/domain_services/: file.py  subscription.py
src/api/domain/interfaces/repositories/: file.py
src/api/domain/interfaces/services/: file.py  subscription.py
src/api/domain/sevices/: file.py  subscription.py  utils.py
src/api/infrastructure/: sessions.py
src/api/infrastructure/models/: picture.py
src/api/infrastructure/models/changelog/: 01-initial.yaml  master.yaml
src/api/infrastructure/repositories/: picture.py
src/api/infrastructure/services/: utils.py
src/api/infrastructure/services/file/: blob.py  s3.py
src/api/infrastructure/services/subscription/: aws.py
src/api/views/: healthcheck.py  metadata.py  picture.py  pictures.py  subscription.py  subscriptions.py  urls.py  utils.py
src/api/views/serializers/: picture.py
src/requirements/: pyproject.toml
terraform/: alb.tf  asg.tf  bastion.tf  ecr.tf  main.tf  rds.tf  s3.tf  ssm.tf  user_data.sh  variables.tf  vpc.tf
