[tool.poetry]
name = "picture-uploader"
version = "0.1.0"
description = "Service for picture upload"
authors = []

[tool.poetry.dependencies]
python = "~3.8"
Flask = "~1.1.2"
gunicorn = "~20.0.4"

urlpath = "~1.1.7"
APScheduler = "~3.3.1"

pydantic = "~1.7.2"
email-validator = "~1.1.3"

SQLAlchemy = "~1.3.20"
psycopg2-binary = "~2.8.6"
dependency-injector = "~4.4.0"

boto3 = "~1.17.85"
ssm-parameter-store = "~19.11.0"
ec2-metadata = "~2.3.0"

Flask-Script = "~2.0.6"

[tool.poetry.dev-dependencies]
mypy = "~0.790"
flake8 = "~3.8.4"
flake8_polyfill = "~1.0.2"
isort = "~5.6.4"
black = "~20.8b1"
pytest = "~6.1.2"
pytest-cov = "~2.10.1"
pytest-factoryboy = "~2.0.3"
mock = "~4.0.2"
licenseheaders = "^0.8.7"

radon = "~4.3.2"
mutmut = "~2.1.0"

pip-licenses = "~3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
